--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@react-email/components": "^0.5.0",
+    "@react-email/tailwind": "^1.2.2",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.55.0",
     "next": "15.4.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-email": "^4.2.8",
+    "resend": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
