DB stuff, what's happening page, and some reminder bug fixes

--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,11 @@
         }
       ]
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron/event-followups",
+      "schedule": "0 9 * * *"
+    }
   ]
 }
