--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
+    "dotenv": "^17.2.2",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
