--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@next/font": "^14.2.15",
     "@react-email/components": "^0.5.0",
     "@react-email/tailwind": "^1.2.2",
-    "@stripe/stripe-js": "^7.9.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.6.1",
@@ -22,8 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-email": "^4.2.8",
-    "resend": "^6.0.1",
-    "stripe": "^18.5.0"
+    "resend": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
