--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@next/font": "^14.2.15",
     "@react-email/components": "^0.5.0",
     "@react-email/tailwind": "^1.2.2",
@@ -17,6 +19,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "dotenv": "^17.2.2",
+    "lucide-react": "^0.544.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
