--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "dotenv": "^17.2.2",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.544.0",
     "next": "15.4.4",
     "react": "19.1.0",
