--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "dotenv": "^17.2.2",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.544.0",
-    "next": "15.4.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-email": "^4.2.8",
     "resend": "^6.0.1"
   },
@@ -34,7 +34,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.4.4",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
